Fixed json naming in frontend

--- a/decarbFrontEnd/src/app/decarb-journey/decarb-shopping-cart/decarb-shopping-cart.component.html
+++ b/decarbFrontEnd/src/app/decarb-journey/decarb-shopping-cart/decarb-shopping-cart.component.html
@@ -79,8 +79,8 @@
   </div>
   
   <div class="savings-container">
-    <p class="savings">{{ formatCostSavings(item.costSavings) }}</p>
-    <p class="savings">{{ item.co2Savings }} kgCO2e</p>
+    <p class="savings">{{ formatCostSavings(item.cost_savings) }}</p>
+    <p class="savings">{{ item.co2_savings }} kgCO2e</p>
   </div>
 </div>
 
