--- a/decarbFrontEnd/src/app/decarb-journey/quartile-steps/scope3-steps/scope3-steps.component.html
+++ b/decarbFrontEnd/src/app/decarb-journey/quartile-steps/scope3-steps/scope3-steps.component.html
@@ -83,8 +83,8 @@
 
     <!-- Savings Information -->
     <div class="savings-info">
-      <p *ngIf="stepData?.costSavings"><strong>Cost Savings:</strong> {{ stepData.costSavings }}</p>
-      <p *ngIf="stepData?.co2Savings"><strong>CO₂ Savings:</strong> {{ stepData.co2Savings }}</p>
+      <p *ngIf="stepData?.cost_savings"><strong>Cost Savings:</strong> {{ stepData.cost_savings }}</p>
+      <p *ngIf="stepData?.co2_savings"><strong>CO₂ Savings:</strong> {{ stepData.co2_savings }}</p>
     </div>
   </div>
 </div>
