--- a/decarbFrontEnd/src/app/decarb-journey/decarb-shopping-cart/decarb-shopping-cart.component.html
+++ b/decarbFrontEnd/src/app/decarb-journey/decarb-shopping-cart/decarb-shopping-cart.component.html
@@ -5,7 +5,7 @@
   <div class="target-info">
     <p><b>Reduction Target</b></p>
     <p>
-      {{ getTotalCO2Savings() }}/{{ targetGoal }} kgCO2e
+      {{ getTotalCO2Savings() | number: '1.2-2' }}/{{ targetGoal }} kgCO2e
       <i
         class="info-icon"
         title="Info"><img class="info" src="../../assets/info.svg"></i>
@@ -75,12 +75,12 @@
   <!-- Content aligned horizontally -->
   <div class="journey-item-info">
     <h4>{{ item.name }}</h4>
-    <p class="transition-percentage">{{ item.transition }}% Transition</p>
+    <p class="transition-percentage">{{ item.transition | number: '1.2-2' }}% Transition</p>
   </div>
   
   <div class="savings-container">
     <p class="savings">{{ formatCostSavings(item.cost_savings) }}</p>
-    <p class="savings">{{ item.co2_savings }} kgCO2e</p>
+    <p class="savings">{{ item.co2_savings | number: '1.2-2' }} kgCO2e</p>
   </div>
 </div>
 
@@ -89,8 +89,8 @@
 <div class="savings-summary">
   <h3>Savings</h3>
   <div class="savings-content">
-  <p>{{getFormattedTotalCostSavings()}}</p>
-  <p>{{ getTotalCO2Savings() }} kgCO2e</p>
+  <p>{{ getFormattedTotalCostSavings() }}</p>
+  <p>{{ getTotalCO2Savings() | number: '1.2-2' }} kgCO2e</p>
 </div>
 </div>
 </div>
